@@ -1,3 +1,8 @@
+2008-02-07  Jb Evain  <jbevain@novell.com>
+
+	* Mono.Cecil/MethodDefinition.cs:
+		add last Is method for semantics property.
+
 2008-02-05  Jb Evain  <jbevain@novell.com>
 
 	* Mono.Cecil/TypeDefinition.cs:
